[gd_scene load_steps=16 format=3]

[ext_resource type="Script" path="res://Script/LDL/Forge.gd" id="1"]
[ext_resource type="FontFile" uid="uid://2rjpff4w8bmb" path="res://Font/华康海报体W12 &amp; 华康海报体W12(P).ttc" id="2"]
[ext_resource type="Texture2D" uid="uid://djwa0gkdba46w" path="res://Art/LDL/zzs.png" id="3"]
[ext_resource type="PackedScene" uid="uid://5s4megl03dv6" path="res://Scene/LDL/ForgeMaterialBox.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://chu1f2ppmry55" path="res://Art/LDL/bs.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dxdwfbn4ipxn8" path="res://Art/LDL/scw.png" id="6"]
[ext_resource type="Texture2D" uid="uid://dk6s86bwt8whj" path="res://Art/LDL/mc.png" id="7"]
[ext_resource type="Texture2D" uid="uid://clenvdet4b6ck" path="res://Art/LDL/sxlh.png" id="8"]
[ext_resource type="FontFile" uid="uid://mq0cfa3t1vbr" path="res://Font/8_FZCuYuan-M03S.ttf" id="9"]
[ext_resource type="Texture2D" uid="uid://dw0g6xclu1rpm" path="res://Art/LDL/dz1.png" id="10"]
[ext_resource type="Texture2D" uid="uid://b5f2s1ribyayt" path="res://Art/LDL/dz2.png" id="11"]
[ext_resource type="Texture2D" uid="uid://cguaxdpr2mbqt" path="res://Art/Shop/46.png" id="12"]
[ext_resource type="Texture2D" uid="uid://cacnicqunqgm7" path="res://Art/LDL/171.png" id="13"]
[ext_resource type="Texture2D" uid="uid://be4vhehdc4mkf" path="res://Art/MagicWeapon/68.png" id="14"]
[ext_resource type="Texture2D" uid="uid://cepttdqbtggkg" path="res://Art/MagicWeapon/70.png" id="15"]

[node name="Forge" type="Node2D"]
script = ExtResource( "1" )

[node name="Title" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -13.0
offset_right = 99.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.972549, 0.976471, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource( "2" )
theme_override_font_sizes/font_size = 32
text = "打造"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Title2" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = 51.0
offset_right = 111.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.976471, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource( "2" )
theme_override_font_sizes/font_size = 22
text = "所需材料"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Zzs" type="TextureRect" parent="."]
offset_left = 132.0
offset_top = -2.0
offset_right = 200.0
offset_bottom = 65.0
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="BasicMaterial" type="ScrollContainer" parent="."]
offset_top = 82.0
offset_right = 339.0
offset_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BasicMaterial" type="HBoxContainer" parent="BasicMaterial"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="ForgeMaterialBox" parent="BasicMaterial/BasicMaterial" instance=ExtResource( "4" )]
layout_mode = 2

[node name="ForgeMaterialBox2" parent="BasicMaterial/BasicMaterial" instance=ExtResource( "4" )]
layout_mode = 2

[node name="ForgeMaterialBox4" parent="BasicMaterial/BasicMaterial" instance=ExtResource( "4" )]
layout_mode = 2

[node name="ForgeMaterialBox3" parent="BasicMaterial/BasicMaterial" instance=ExtResource( "4" )]
layout_mode = 2

[node name="BSBoxPic" type="HBoxContainer" parent="."]
offset_left = 12.0
offset_top = 164.0
offset_right = 336.0
offset_bottom = 231.0
theme_override_constants/separation = 55
metadata/_edit_lock_ = true

[node name="Bs1" type="TextureRect" parent="BSBoxPic"]
layout_mode = 2
texture = ExtResource( "5" )

[node name="Bs2" type="TextureRect" parent="BSBoxPic"]
layout_mode = 2
texture = ExtResource( "5" )

[node name="Bs3" type="TextureRect" parent="BSBoxPic"]
layout_mode = 2
texture = ExtResource( "5" )

[node name="BSBox" type="HBoxContainer" parent="."]
offset_left = 20.0
offset_top = 172.0
offset_right = 320.0
offset_bottom = 222.0
theme_override_constants/separation = 73
metadata/_edit_lock_ = true

[node name="LastItem" type="TextureRect" parent="."]
offset_left = 12.0
offset_top = 271.0
offset_right = 80.0
offset_bottom = 338.0
texture = ExtResource( "6" )
metadata/_edit_lock_ = true

[node name="Name" type="TextureRect" parent="LastItem"]
layout_mode = 0
offset_left = 72.0
offset_top = 5.0
offset_right = 128.0
offset_bottom = 45.0
scale = Vector2(0.7, 0.7)
texture = ExtResource( "7" )
expand_mode = 1
metadata/_edit_lock_ = true

[node name="ItemName" type="Label" parent="LastItem/Name"]
layout_mode = 0
offset_left = 64.0
offset_top = 4.0
offset_right = 241.0
offset_bottom = 35.0
theme_override_colors/font_color = Color(0.45098, 0.427451, 0.4, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource( "2" )
theme_override_font_sizes/font_size = 27
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Need" type="TextureRect" parent="LastItem"]
layout_mode = 0
offset_left = 71.0
offset_top = 36.0
offset_right = 173.0
offset_bottom = 76.0
scale = Vector2(0.7, 0.7)
texture = ExtResource( "8" )
expand_mode = 1
metadata/_edit_lock_ = true

[node name="LH" type="Label" parent="LastItem/Need"]
layout_mode = 0
offset_left = 106.0
offset_top = 10.0
offset_right = 219.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource( "9" )
theme_override_font_sizes/font_size = 22
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Froge" type="TextureButton" parent="."]
offset_left = 111.0
offset_top = 331.0
offset_right = 251.0
offset_bottom = 379.0
texture_normal = ExtResource( "10" )
texture_pressed = ExtResource( "10" )
texture_hover = ExtResource( "11" )
texture_disabled = ExtResource( "10" )
metadata/_edit_lock_ = true

[node name="Light" type="Sprite2D" parent="Froge"]
show_behind_parent = true
position = Vector2(103, 56)
texture = ExtResource( "12" )
metadata/_edit_lock_ = true

[node name="Arrow" type="TextureRect" parent="."]
offset_left = 144.0
offset_top = 230.0
offset_right = 195.0
offset_bottom = 281.0
texture = ExtResource( "13" )
metadata/_edit_lock_ = true

[node name="Help" type="TextureButton" parent="."]
offset_left = 300.0
offset_top = 1.0
offset_right = 340.0
offset_bottom = 41.0
texture_normal = ExtResource( "14" )
texture_pressed = ExtResource( "14" )
texture_hover = ExtResource( "15" )
texture_disabled = ExtResource( "14" )
metadata/_edit_lock_ = true

[connection signal="pressed" from="Froge" to="." method="_on_froge_pressed" flags=18]
[connection signal="pressed" from="Help" to="." method="_on_help_pressed" flags=18]
